turtleart.housetree.HouseTree.scala.error
Erreur de compilation :
HouseTree:1: error: Missing closing brace `}' assumed here
override def run() {
^HouseTree:1: error: expected start of definition
override def run() {
         ^HouseTree:2: error: Missing closing brace `}' assumed here
for (i<- 1 to 4){
^HouseTree:2: error: expected class or object definition
for (i<- 1 to 4){
^